--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="sidebar-section">
                 <div class="sidebar-title">Livros</div>
                 <ul class="sidebar-list" id="sidebar-livros">
-        
+                    <!-- Livros serão inseridos via JS -->
                 </ul>
             </div>
             <div class="sidebar-section">
@@ -38,7 +38,7 @@
     </div>
     <script src="script.js"></script>
     <script>
-      
+      // Preenche a lista de livros na sidebar
       document.addEventListener('DOMContentLoaded', function() {
         const autores = [
           "As raízes do Romantismo",
